--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 	<script src="./assets/scripts.js"></script>
 </head>
 <body>
-<div class="top-header">
+<header class="top-header">
 	<h1 class="name">Nina Carducci</h1>
 	<nav class="nav">   
 		<ul>
@@ -27,8 +27,8 @@
 			<li><a class="social-link" href="https://www.instagram.com/ninacarducci.photo/?hl=fr" target="_blank"><img src="assets/images/instagram.png" alt="logo instagram"></a></li>
 		</ul>
 	</nav>
-</div>
-<div id="header">
+</header>
+<main>
 	<div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
 		<div class="carousel-indicators">
 			<button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
@@ -37,19 +37,19 @@
 		</div>
 		<div class="carousel-inner">
 			<div class="carousel-item active">
-				<img srcset="./assets/images/slider/businessman-shibuya-crossing-desktop.webp 1920w, ./assets/images/slider/businessman-shibuya-crossing-mobile.webp 414w"
-					 sizes="(min-width: 2040px) 1920px, calc(94.19vw + 17px)"
-					 src="./assets/images/slider/businessman-shibuya-crossing-desktop.webp" class="d-block w-100" alt="photo d'un homme d'affaire traversant sur le passage piéton du Shibuya Crossing de dos">
+				<img srcset="./assets/images/slider/businessman-shibuya-crossing-desktop.webp 1920w, ./assets/images/slider/businessman-shibuya-crossing-tablet.webp 1000w, ./assets/images/slider/businessman-shibuya-crossing-mobile.webp 500w"
+					sizes="100vw"
+					src="./assets/images/slider/businessman-shibuya-crossing-desktop.webp" class="d-block w-100" alt="photo d'un homme d'affaire traversant sur le passage piéton du Shibuya Crossing de dos">
 			</div>
 			<div class="carousel-item">
-				<img srcset="./assets/images/slider/Public-fosse-concert-desktop.webp 1920w, ./assets/images/slider/Public-fosse-concert-mobile.webp 414w"
-					 sizes="(max-width: 500px) 500px, 1920px"
-					 src="./assets/images/slider/Public-fosse-concert-desktop.webp" class="d-block w-100" alt="Photo du public de la fosse d'un concert">
+				<img srcset="./assets/images/slider/Public-fosse-concert-desktop.webp 1920w, ./assets/images/slider/Public-fosse-concert-tablet.webp 1000w, ./assets/images/slider/Public-fosse-concert-mobile.webp 500w"
+					sizes="100vw"
+					src="./assets/images/slider/Public-fosse-concert-desktop.webp" class="d-block w-100" alt="Photo du public de la fosse d'un concert">
 			</div>
 			<div class="carousel-item">
-				<img srcset="./assets/images/slider/mariage-applaudissement-desktop.webp 1920w, ./assets/images/slider/mariage-applaudissement-mobile.webp 414w"
-					 sizes="(max-width: 500px) 500px, 1920px"
-					 src="./assets/images/slider/mariage-applaudissement-desktop.webp" class="d-block w-100" alt="Photo de jeunes mariées qui s'embrassent sous les applaudissements de leur convives">
+				<img srcset="./assets/images/slider/mariage-applaudissement-desktop.webp 1920w, ./assets/images/slider/mariage-applaudissement-tablet.webp 1000w ./assets/images/slider/mariage-applaudissement-mobile.webp 500w"
+					sizes="100vw"
+					src="./assets/images/slider/mariage-applaudissement-desktop.webp" class="d-block w-100" alt="Photo de jeunes mariées qui s'embrassent sous les applaudissements de leur convives">
 			</div>
 		</div>
 		<button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
@@ -61,143 +61,109 @@
 			<span class="visually-hidden">Next</span>
 		</button>
 	</div>
-</div>
-<div id="about">
-	<div class="picture left">
-		<img srcset="./assets/images/nina-mobile.webp 256w, ./assets/images/nina-desktop.webp 560w" 
-			 sizes="(min-width: 2020px) 560px, (min-width: 1200px) calc(30vw - 40px), (min-width: 660px) calc(46.15vw - 75px), calc(80vw - 51px)"
-			 src="./assets/images/nina-desktop.webp" alt="Photo portrait de Nina Carducci">
+	<div id="about">
+		<div class="picture left">
+			<img src="./assets/images/nina.webp" alt="Photo portrait de Nina Carducci">
+		</div>
+		<div id="about-me">
+			<h2 class="about-me__title">A propos de moi</h2>
+			<p class="about-me__introduction">Devenir photographe était pour moi une évidence. Comme si j’y étais prédestiné. Saisir un moment, une émotion, une situation, un endroit, une lumière et les rendre immortels, voilà ce qui me fait vibrer.</p>
+			<p>Nous passons notre vie à chercher le bonheur, et lorsque nous y touchons, nous n’avons qu’une envie : le figer au travers de photographies pour le savourer avec les personnes qui sont importantes à nos yeux, ou le partager au plus grand nombre.
+				C’est ce que je vous propose : saisir ces merveilleux moments au travers de mon regard, mon approche, ma technique. Rendre ces moments immortels, afin que vous puissiez y puiser de l’amour, du bonheur, de la tendresse et de lumière à chaque fois que vous poserez les yeux sur vos photos.</p>
+		</div>
 	</div>
-	<div id="about-me">
-		<h2 class="about-me__title">A propos de moi</h2>
-		<p class="about-me__introduction">Devenir photographe était pour moi une évidence. Comme si j’y étais prédestiné. Saisir un moment, une émotion, une situation, un endroit, une lumière et les rendre immortels, voilà ce qui me fait vibrer.</p>
-		<p>Nous passons notre vie à chercher le bonheur, et lorsque nous y touchons, nous n’avons qu’une envie : le figer au travers de photographies pour le savourer avec les personnes qui sont importantes à nos yeux, ou le partager au plus grand nombre.
-			C’est ce que je vous propose : saisir ces merveilleux moments au travers de mon regard, mon approche, ma technique. Rendre ces moments immortels, afin que vous puissiez y puiser de l’amour, du bonheur, de la tendresse et de lumière à chaque fois que vous poserez les yeux sur vos photos.</p>
+	<div id="gallery">
+		<h2 class="title">Portfolio</h2>
+		<div class="container py-3">
+			<div class="gallery" style="display: none">
+				<img data-gallery-tag="Concert" class="gallery-item" src="./assets/images/gallery/concerts/concert-aaron-paul.webp" alt="Photo du concert d'Aaron Paul"/>
+				<img data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images/gallery/entreprise/portrait-homme-affaire.webp" alt="Photo portrait d'un homme d'affaire"/>
+				<img data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images/gallery/entreprise/salariées-riant.webp" alt="Photo d'une entreprise où deux salariées rient"/>
+				<img data-gallery-tag="Mariages" class="gallery-item" src="./assets/images/gallery/mariage/personnes-se-donnant-les-mains.webp" alt="Photo où deux personnes vont se donner les mains"/>
+				<img data-gallery-tag="Portrait" class="gallery-item" src="./assets/images/gallery/portraits/portrait-ade-tunji.webp" alt="Photo portrait d'Ade Tunji"/>
+				<img data-gallery-tag="Mariages" class="gallery-item" src="./assets/images/gallery/mariage/mariés-souriants.webp" alt="Photo de deux jeunes mariés souriant"/>
+				<img data-gallery-tag="Portrait" class="gallery-item" src="./assets/images/gallery/portraits/portrait-femme-lunettes.webp" alt="Photo portrait d'une jeune fille avec des lunettes"/>
+				<img data-gallery-tag="Concert" class="gallery-item" src="./assets/images/gallery/concerts/concert-austin-neill.webp" alt="Photo du concert de Austin Neill"/>
+				<img data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images/gallery/entreprise/salariée-souriante.webp" alt="Photo portrait d'une salariée d'entreprise riant devant son ordinateur"/>
+			</div>
+		</div>
+		<div class="quote">
+			<figure>
+				<blockquote>
+					<p class="quote__text">Un portrait n’est pas une ressemblance. Dès lors qu’une émotion ou qu’un fait est traduit en photo, il cesse d’être un fait pour devenir une opinion. L’inexactitude n’existe pas en photographie. Toutes les photos sont exactes. Aucune d’elles n’est la vérité.</p>
+				</blockquote>
+				<figcaption class="quote__author">- Richard Avedon</figcaption>
+			</figure>
+		</div>
 	</div>
-</div>
-<div id="gallery">
-	<h2 class="title">Portfolio</h2>
-	<div class="container py-3">
-		<div class="gallery" style="display: none">
-			<img data-gallery-tag="Concert" class="gallery-item" 
-				srcset="./assets/images/gallery/concerts/concert-aaron-paul-desktop.webp 440w, ./assets/images/gallery/concerts/concert-aaron-paul-mobile.webp 413w"
-				sizes="(min-width: 1400px) 424px, (min-width: 1200px) 364px, (min-width: 1000px) 304px, (min-width: 780px) 224px, (min-width: 580px) 254px, calc(100vw - 16px)"
-				src="./assets/images/gallery/concerts/concert-aaron-paul-desktop.webp" alt="Photo du concert d'Aaron Paul"/>
-
-			<img data-gallery-tag="Entreprises" class="gallery-item" 
-				srcset="./assets/images/gallery/entreprise/portrait-homme-affaire-desktop.webp 440w, ./assets/images/gallery/entreprise/portrait-homme-affaire-mobile.webp 413w"
-				sizes="(min-width: 1400px) 424px, (min-width: 1200px) 364px, (min-width: 1000px) 304px, (min-width: 780px) 224px, (min-width: 580px) 254px, calc(100vw - 16px)"
-				src="./assets/images/gallery/entreprise/portrait-homme-affaire-desktop.webp" alt="Photo portrait d'un homme d'affaire"/>
-
-			<img data-gallery-tag="Entreprises" class="gallery-item" 
-				srcset="./assets/images/gallery/entreprise/salariées-riant-desktop.webp 440w, ./assets/images/gallery/entreprise/salariées-riant-mobile.webp 413w"
-				sizes="(min-width: 1400px) 424px, (min-width: 1200px) 364px, (min-width: 1000px) 304px, (min-width: 780px) 224px, (min-width: 580px) 254px, calc(100vw - 16px)"
-				src="./assets/images/gallery/entreprise/salariées-riant-desktop.webp" alt="Photo d'une entreprise où deux salariées rient"/>
-
-			<img data-gallery-tag="Mariages" class="gallery-item" 
-				srcset="./assets/images/gallery/mariage/personnes-se-donnant-les-mains-desktop.webp 440w, ./assets/images/gallery/mariage/personnes-se-donnant-les-mains-mobile.webp 413w"
-				sizes="(min-width: 1400px) 424px, (min-width: 1200px) 364px, (min-width: 1000px) 304px, (min-width: 780px) 224px, (min-width: 580px) 254px, calc(100vw - 16px)"
-				src="./assets/images/gallery/mariage/personnes-se-donnant-les-mains-desktop.webp" alt="Photo où deux personnes vont se donner les mains"/>
-
-			<img data-gallery-tag="Portrait" class="gallery-item" 
-				srcset="./assets/images/gallery/portraits/portrait-ade-tunji-desktop.webp 440w, ./assets/images/gallery/portraits/portrait-ade-tunji-mobile.webp 413w"
-				sizes="(min-width: 1400px) 424px, (min-width: 1200px) 364px, (min-width: 1000px) 304px, (min-width: 780px) 224px, (min-width: 580px) 254px, calc(100vw - 16px)"
-				src="./assets/images/gallery/portraits/portrait-ade-tunji-desktop.webp" alt="Photo portrait d'Ade Tunji"/>
-
-			<img data-gallery-tag="Mariages" class="gallery-item" 
-				srcset="./assets/images/gallery/mariage/mariés-souriants-desktop.webp 440w, ./assets/images/gallery/mariage/mariés-souriants-mobile.webp 413w"
-				sizes="(min-width: 1400px) 424px, (min-width: 1200px) 364px, (min-width: 1000px) 304px, (min-width: 780px) 224px, (min-width: 580px) 254px, calc(100vw - 16px)"
-				src="./assets/images/gallery/mariage/mariés-souriants-desktop.webp" alt="Photo de deux jeunes mariés souriant"/>
-
-			<img data-gallery-tag="Portrait" class="gallery-item" 
-				srcset="./assets/images/gallery/portraits/portrait-femme-lunettes-desktop.webp 440w, ./assets/images/gallery/portraits/portrait-femme-lunettes-mobile.webp 413w"
-				sizes="(min-width: 1400px) 424px, (min-width: 1200px) 364px, (min-width: 1000px) 304px, (min-width: 780px) 224px, (min-width: 580px) 254px, calc(100vw - 16px)"
-				src="./assets/images/gallery/portraits/portrait-femme-lunettes-desktop.webp" alt="Photo portrait d'une jeune fille avec des lunettes"/>
-
-			<img data-gallery-tag="Concert" class="gallery-item"
-				srcset="./assets/images/gallery/concerts/concert-austin-neill-desktop.webp 440w, ./assets/images/gallery/concerts/concert-austin-neill-mobile.webp 413w"
-				sizes="(min-width: 1400px) 424px, (min-width: 1200px) 364px, (min-width: 1000px) 304px, (min-width: 780px) 224px, (min-width: 580px) 254px, calc(100vw - 16px)" 
-				src="./assets/images/gallery/concerts/concert-austin-neill-desktop.webp" alt="Photo du concert de Austin Neill"/>
-
-			<img data-gallery-tag="Entreprises" class="gallery-item" 
-				srcset="./assets/images/gallery/entreprise/salariée-souriante-desktop.webp 440w, ./assets/images/gallery/entreprise/salariée-souriante-mobile.webp 413w"
-				sizes="(min-width: 1400px) 424px, (min-width: 1200px) 364px, (min-width: 1000px) 304px, (min-width: 780px) 224px, (min-width: 580px) 254px, calc(100vw - 16px)"
-				src="./assets/images/gallery/entreprise/salariée-souriante-desktop.webp" alt="Photo portrait d'une salariée d'entreprise riant devant son ordinateur"/>
+	<div id="services">
+		<h2 class="title">Mes services</h2>
+		<div class="container">
+			<div class="service">
+				<div class="service__description">
+					<h3>Shooting photo</h3>
+					<p>Pour capturer vos moments les plus précieux et garder un souvenir impérissable. Je me déplace en Île-de-France pour réaliser vos photos</p>
+				</div>
+				<div class="service__price">
+					<p>350€/demi journée</p>
+					<span>Matériel, déplacement inclus</span>
+				</div>
+			</div>
+			<div class="service">
+				<div class="service__description">
+					<h3>Retouches</h3>
+					<p>Vous souhaitez retoucher vos photos pour un résultat professionnel ? Bénéficier d’un rendu optimal pour vos publications</p>
+				</div>
+				<div class="service__price">
+					<p>50€/photo</p>
+					<span>2 AR par photo</span>
+				</div>
+			</div>
+			<div class="service">
+				<div class="service__description">
+					<h3>Album photos</h3>
+					<p>Partagez avec vos proches et vos clients les photos des moments partagés ensemble à travers un album photo personnalisé</p>
+				</div>
+				<div class="service__price">
+					<p>400€ album A4</p>
+					<span>30 pages recto/verso</span>
+				</div>
+			</div>
 		</div>
 	</div>
 	<div class="quote">
 		<figure>
 			<blockquote>
-				<p class="quote__text">Un portrait n’est pas une ressemblance. Dès lors qu’une émotion ou qu’un fait est traduit en photo, il cesse d’être un fait pour devenir une opinion. L’inexactitude n’existe pas en photographie. Toutes les photos sont exactes. Aucune d’elles n’est la vérité.</p>
+				<p class="quote__text">De manière inconsciente, je crois, je guette un regard, une expression, des traits ou une nostalgie capable de résumer ou plus exactement de révéler une vie</p>
 			</blockquote>
 			<figcaption class="quote__author">- Richard Avedon</figcaption>
 		</figure>
 	</div>
-</div>
-<div id="services">
-	<h2 class="title">Mes services</h2>
-	<div class="container">
-		<div class="service">
-			<div class="service__description">
-				<h3>Shooting photo</h3>
-				<p>Pour capturer vos moments les plus précieux et garder un souvenir impérissable. Je me déplace en Île-de-France pour réaliser vos photos</p>
+	<div id="contact">
+		<div class="container">
+			<div class="form-container">
+				<h2>Une question ? Une demande de devis ?</h2>
+				<p> N’hésitez pas à m’écrire ! Je vous répondrais en moins de 24 heures</p>
+				<form action="" method="post">
+					<label for="nom">Nom</label>
+					<input type="text" name="nom" id="nom">
+					<label for="email">Email</label>
+					<input type="email" name="email" id="email">
+					<label for="message">Message</label>
+					<textarea name="message" id="message" cols="30" rows="10"></textarea>
+					<input type="submit" value="Envoyer"/>
+				</form>
 			</div>
-			<div class="service__price">
-				<p>350€/demi journée</p>
-				<span>Matériel, déplacement inclus</span>
-			</div>
-		</div>
-		<div class="service">
-			<div class="service__description">
-				<h3>Retouches</h3>
-				<p>Vous souhaitez retoucher vos photos pour un résultat professionnel ? Bénéficier d’un rendu optimal pour vos publications</p>
-			</div>
-			<div class="service__price">
-				<p>50€/photo</p>
-				<span>2 AR par photo</span>
-			</div>
-		</div>
-		<div class="service">
-			<div class="service__description">
-				<h3>Album photos</h3>
-				<p>Partagez avec vos proches et vos clients les photos des moments partagés ensemble à travers un album photo personnalisé</p>
-			</div>
-			<div class="service__price">
-				<p>400€ album A4</p>
-				<span>30 pages recto/verso</span>
+			<div class="picture right">
+				<img src="./assets/images/camera.webp" alt="Photo d'un appareil photo"/>
 			</div>
 		</div>
 	</div>
-</div>
-<div class="quote">
-	<figure>
-		<blockquote>
-			<p class="quote__text">De manière inconsciente, je crois, je guette un regard, une expression, des traits ou une nostalgie capable de résumer ou plus exactement de révéler une vie</p>
-		</blockquote>
-		<figcaption class="quote__author">- Richard Avedon</figcaption>
-	</figure>
-</div>
-<div id="contact">
-	<div class="container">
-		<div class="form-container">
-			<h2>Une question ? Une demande de devis ?</h2>
-			<p> N’hésitez pas à m’écrire ! Je vous répondrais en moins de 24 heures</p>
-			<form action="" method="post">
-				<label for="nom">Nom</label>
-				<input type="text" name="nom" id="nom">
-				<label for="email">Email</label>
-				<input type="email" name="email" id="email">
-				<label for="message">Message</label>
-				<textarea name="message" id="message" cols="30" rows="10"></textarea>
-				<input type="submit" value="Envoyer"/>
-			</form>
-		</div>
-		<div class="picture right">
-			<img srcset="./assets/images/camera-desktop.webp 419w, ./assets/images/camera-mobile.webp 260w"
-				sizes="(min-width: 1600px) 419px, (min-width: 1200px) calc(28.16vw - 26px), (min-width: 1020px) calc(43.75vw - 68px), (min-width: 980px) calc(200vw - 1612px), (min-width: 680px) calc(42.86vw - 63px), (min-width: 360px) calc(45vw - 49px), calc(90vw - 99px)"
-				src="./assets/images/camera-desktop.webp" alt="Photo d'un appareil photo"/>
-		</div>
+</main>
+<footer>
+	<div class="rights">
+		<p class="footer-text">&copy; 2023 Nina Carducci</p>
 	</div>
-</div>
+</footer>
 </body>
 </html>
