--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="./assets/bootstrap/bootstrap.min.css">
 	<link rel="stylesheet" href="./assets/style.min.css">
-	<style>@import url('https://fonts.googleapis.com/css2?family=Inter:wght@300&family=Spectral:wght@300;800&display=swap');</style> 
+	<style>@import url('https://fonts.googleapis.com/css2?family=Inter&family=Spectral:ital,wght@0,400;1,300;1,800&display=swap');</style>
 	<meta charset="UTF-8">
 	<script src="./assets/bootstrap/bootstrap.bundle.min.js" async></script>
 	<script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous" defer></script>
@@ -37,17 +37,17 @@
 			<div class="carousel-item active">
 				<img srcset="./assets/images/slider/businessman-shibuya-crossing-desktop.webp 1920w, ./assets/images/slider/businessman-shibuya-crossing-tablet.webp 1000w, ./assets/images/slider/businessman-shibuya-crossing-mobile.webp 500w"
 					sizes="(min-width: 2040px) 1920px, calc(94.19vw + 17px)"
-					src="./assets/images/slider/businessman-shibuya-crossing-desktop.webp" loading="eager" class="d-block w-100" alt="photo d'un homme d'affaire traversant sur le passage piéton du Shibuya Crossing de dos">
+					src="./assets/images/slider/businessman-shibuya-crossing-desktop.webp" loading="eager" class="d-block w-100 sliderImg" alt="photo d'un homme d'affaire traversant sur le passage piéton du Shibuya Crossing de dos" width="1440" height="666">
 			</div>
 			<div class="carousel-item">
 				<img srcset="./assets/images/slider/Public-fosse-concert-desktop.webp 1920w, ./assets/images/slider/Public-fosse-concert-tablet.webp 1000w, ./assets/images/slider/Public-fosse-concert-mobile.webp 500w"
 					sizes="100vw"
-					src="./assets/images/slider/Public-fosse-concert-desktop.webp" loading="lazy" class="d-block w-100" alt="Photo du public de la fosse d'un concert">
+					src="./assets/images/slider/Public-fosse-concert-desktop.webp" loading="lazy" class="d-block w-100 sliderImg" alt="Photo du public de la fosse d'un concert" width="1440" height="666">
 			</div>
 			<div class="carousel-item">
 				<img srcset="./assets/images/slider/mariage-applaudissement-desktop.webp 1920w, ./assets/images/slider/mariage-applaudissement-tablet.webp 1000w, ./assets/images/slider/mariage-applaudissement-mobile.webp 500w"
 					sizes="100vw"
-					src="./assets/images/slider/mariage-applaudissement-desktop.webp" loading="lazy" class="d-block w-100" alt="Photo de jeunes mariées qui s'embrassent sous les applaudissements de leur convives">
+					src="./assets/images/slider/mariage-applaudissement-desktop.webp" loading="lazy" class="d-block w-100 sliderImg" alt="Photo de jeunes mariées qui s'embrassent sous les applaudissements de leur convives" width="1440" height="666">
 			</div>
 		</div>
 		<button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
