--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 	</div>
 	<div id="about">
 		<div class="picture left">
-			<img src="./assets/images/nina.webp" alt="Photo portrait de Nina Carducci">
+			<img src="./assets/images/nina.webp" alt="Photo portrait de Nina Carducci" width="500" height="499">
 		</div>
 		<div id="about-me">
 			<h2 class="about-me__title">A propos de moi</h2>
@@ -155,7 +155,7 @@
 				</form>
 			</div>
 			<div class="picture right">
-				<img src="./assets/images/camera.webp" loading="lazy" alt="Photo d'un appareil photo"/>
+				<img src="./assets/images/camera.webp" loading="lazy" alt="Photo d'un appareil photo" width="500" height="499">
 			</div>
 		</div>
 	</div>
