--- a/index.html
+++ b/index.html
@@ -35,19 +35,19 @@
 		</div>
 		<div class="carousel-inner">
 			<div class="carousel-item active">
-				<img srcset="./assets/images/slider/businessman-shibuya-crossing-desktop.webp 1920w, ./assets/images/slider/businessman-shibuya-crossing-tablet.webp 1000w, ./assets/images/slider/businessman-shibuya-crossing-mobile.webp 500w"
-					sizes="(min-width: 2040px) 1920px, calc(94.19vw + 17px)"
-					src="./assets/images/slider/businessman-shibuya-crossing-desktop.webp" loading="eager" class="d-block w-100 sliderImg" alt="photo d'un homme d'affaire traversant sur le passage piéton du Shibuya Crossing de dos" width="1440" height="666">
+				<img srcset="./assets/images/slider/businessman-shibuya-crossing-700.webp 700w, ./assets/images/slider/businessman-shibuya-crossing-1440.webp 1440w"
+					sizes="(max-width: 700px) 100vw, 1440px"
+					src="./assets/images/slider/businessman-shibuya-crossing-1440.webp" loading="eager" class="d-block w-100 sliderImg" alt="photo d'un homme d'affaire traversant sur le passage piéton du Shibuya Crossing de dos" width="1440" height="666">
 			</div>
 			<div class="carousel-item">
-				<img srcset="./assets/images/slider/Public-fosse-concert-desktop.webp 1920w, ./assets/images/slider/Public-fosse-concert-tablet.webp 1000w, ./assets/images/slider/Public-fosse-concert-mobile.webp 500w"
-					sizes="100vw"
-					src="./assets/images/slider/Public-fosse-concert-desktop.webp" loading="lazy" class="d-block w-100 sliderImg" alt="Photo du public de la fosse d'un concert" width="1440" height="666">
+				<img srcset="./assets/images/slider/Public-fosse-concert-700.webp 700w, ./assets/images/slider/Public-fosse-concert-1440.webp 1440w"
+					sizes="(max-width: 700px) 100vw, 1440px"
+					src="./assets/images/slider/Public-fosse-concert-1440.webp" loading="lazy" class="d-block w-100 sliderImg" alt="Photo du public de la fosse d'un concert" width="1440" height="666">
 			</div>
 			<div class="carousel-item">
-				<img srcset="./assets/images/slider/mariage-applaudissement-desktop.webp 1920w, ./assets/images/slider/mariage-applaudissement-tablet.webp 1000w, ./assets/images/slider/mariage-applaudissement-mobile.webp 500w"
-					sizes="100vw"
-					src="./assets/images/slider/mariage-applaudissement-desktop.webp" loading="lazy" class="d-block w-100 sliderImg" alt="Photo de jeunes mariées qui s'embrassent sous les applaudissements de leur convives" width="1440" height="666">
+				<img srcset="./assets/images/slider/mariage-applaudissement-700.webp 700w, ./assets/images/slider/mariage-applaudissement-1440.webp 1440w"
+					sizes="(max-width: 700px) 100vw, 1440px"
+					src="./assets/images/slider/mariage-applaudissement-1440.webp" loading="lazy" class="d-block w-100 sliderImg" alt="Photo de jeunes mariées qui s'embrassent sous les applaudissements de leur convives" width="1440" height="666">
 			</div>
 		</div>
 		<button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
@@ -61,7 +61,7 @@
 	</div>
 	<div id="about">
 		<div class="picture left">
-			<img src="./assets/images/nina.webp" alt="Photo portrait de Nina Carducci" width="500" height="499">
+			<img src="./assets/images/nina-800.webp" srcset="./assets/images/nina-500.webp 500w" sizes="(max-width: 500px) 500px, 800px" alt="Photo portrait de Nina Carducci" width="800" height="798">
 		</div>
 		<div id="about-me">
 			<h2 class="about-me__title">A propos de moi</h2>
@@ -155,7 +155,7 @@
 				</form>
 			</div>
 			<div class="picture right">
-				<img src="./assets/images/camera.webp" loading="lazy" alt="Photo d'un appareil photo" width="500" height="499">
+				<img src="./assets/images/camera-800.webp" srcset="./assets/images/camera-500.webp 500w" sizes="(max-width: 500px) 500px, 800px" loading="lazy" alt="Photo d'un appareil photo" width="800" height="798">
 			</div>
 		</div>
 	</div>
