--- a/index.html
+++ b/index.html
@@ -96,19 +96,19 @@
 		</div>
 		<div class="carousel-inner">
 			<div class="carousel-item active">
-				<img srcset="./assets/images/slider/businessman-shibuya-crossing-700.webp 700w, ./assets/images/slider/businessman-shibuya-crossing-1440.webp 1440w"
+				<img srcset="https://cdn.jsdelivr.net/gh/Florian-Godeau/Projet-9-Nina-Carducci/assets/images/slider/businessman-shibuya-crossing-700.webp 700w, https://cdn.jsdelivr.net/gh/Florian-Godeau/Projet-9-Nina-Carducci/assets/images/slider/businessman-shibuya-crossing-1440.webp 1440w"
 					sizes="(max-width: 700px) 100vw, 1440px"
-					src="./assets/images/slider/businessman-shibuya-crossing-1440.webp" loading="eager" class="d-block w-100 sliderImg" alt="photo d'un homme d'affaire traversant sur le passage piéton du Shibuya Crossing de dos" width="1440" height="666">
+					src="https://cdn.jsdelivr.net/gh/Florian-Godeau/Projet-9-Nina-Carducci/assets/images/slider/businessman-shibuya-crossing-1440.webp" loading="eager" class="d-block w-100 sliderImg" alt="photo d'un homme d'affaire traversant sur le passage piéton du Shibuya Crossing de dos" width="1440" height="666">
 			</div>
 			<div class="carousel-item">
-				<img srcset="./assets/images/slider/Public-fosse-concert-700.webp 700w, ./assets/images/slider/Public-fosse-concert-1440.webp 1440w"
+				<img srcset="https://cdn.jsdelivr.net/gh/Florian-Godeau/Projet-9-Nina-Carducci/assets/images/slider/Public-fosse-concert-700.webp 700w, https://cdn.jsdelivr.net/gh/Florian-Godeau/Projet-9-Nina-Carducci/assets/images/slider/Public-fosse-concert-1440.webp 1440w"
 					sizes="(max-width: 700px) 100vw, 1440px"
-					src="./assets/images/slider/Public-fosse-concert-1440.webp" loading="lazy" class="d-block w-100 sliderImg" alt="Photo du public de la fosse d'un concert" width="1440" height="666">
+					src="https://cdn.jsdelivr.net/gh/Florian-Godeau/Projet-9-Nina-Carducci/assets/images/slider/Public-fosse-concert-1440.webp" loading="lazy" class="d-block w-100 sliderImg" alt="Photo du public de la fosse d'un concert" width="1440" height="666">
 			</div>
 			<div class="carousel-item">
-				<img srcset="./assets/images/slider/mariage-applaudissement-700.webp 700w, ./assets/images/slider/mariage-applaudissement-1440.webp 1440w"
+				<img srcset="https://cdn.jsdelivr.net/gh/Florian-Godeau/Projet-9-Nina-Carducci/assets/images/slider/mariage-applaudissement-700.webp 700w, https://cdn.jsdelivr.net/gh/Florian-Godeau/Projet-9-Nina-Carducci/assets/images/slider/mariage-applaudissement-1440.webp 1440w"
 					sizes="(max-width: 700px) 100vw, 1440px"
-					src="./assets/images/slider/mariage-applaudissement-1440.webp" loading="lazy" class="d-block w-100 sliderImg" alt="Photo de jeunes mariées qui s'embrassent sous les applaudissements de leur convives" width="1440" height="666">
+					src="https://cdn.jsdelivr.net/gh/Florian-Godeau/Projet-9-Nina-Carducci/assets/images/slider/mariage-applaudissement-1440.webp" loading="lazy" class="d-block w-100 sliderImg" alt="Photo de jeunes mariées qui s'embrassent sous les applaudissements de leur convives" width="1440" height="666">
 			</div>
 		</div>
 		<button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
@@ -122,7 +122,7 @@
 	</div>
 	<div id="about">
 		<div class="picture left">
-			<img src="./assets/images/nina-800.webp" srcset="./assets/images/nina-500.webp 500w" sizes="(max-width: 500px) 500px, 800px" alt="Photo portrait de Nina Carducci" width="800" height="798">
+			<img src="https://cdn.jsdelivr.net/gh/Florian-Godeau/Projet-9-Nina-Carducci/assets/images/nina-800.webp" srcset="https://cdn.jsdelivr.net/gh/Florian-Godeau/Projet-9-Nina-Carducci/assets/images/nina-500.webp 500w" sizes="(max-width: 500px) 500px, 800px" alt="Photo portrait de Nina Carducci" width="800" height="798">
 		</div>
 		<div id="about-me">
 			<h2 class="about-me__title">A propos de moi</h2>
@@ -135,15 +135,15 @@
 		<h2 class="title">Portfolio</h2>
 		<div class="container py-3">
 			<div class="gallery" style="display: none">
-				<img data-gallery-tag="Concert" class="gallery-item" src="./assets/images/gallery/concerts/concert-aaron-paul-800.webp" srcset="./assets/images/gallery/concerts/concert-aaron-paul-500.webp 500w" sizes="(max-width: 500px) 500px, 800px" loading="lazy" alt="Photo du concert d'Aaron Paul"/>
-				<img data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images/gallery/entreprise/portrait-homme-affaire-800.webp" srcset="./assets/images/gallery/entreprise/portrait-homme-affaire-500.webp 500w" sizes="(max-width: 500px) 500px, 800px" loading="lazy" alt="Photo portrait d'un homme d'affaire"/>
-				<img data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images/gallery/entreprise/salariées-riant-800.webp" srcset="./assets/images/gallery/entreprise/salariées-riant-500.webp 500w" sizes="(max-width: 500px) 500px, 800px" loading="lazy" alt="Photo d'une entreprise où deux salariées rient"/>
-				<img data-gallery-tag="Mariages" class="gallery-item" src="./assets/images/gallery/mariage/personnes-se-donnant-les-mains-800.webp" srcset="./assets/images/gallery/mariage/personnes-se-donnant-les-mains-500.webp 500w" sizes="(max-width: 500px) 500px, 800px" loading="lazy" alt="Photo où deux personnes vont se donner les mains"/>
-				<img data-gallery-tag="Portrait" class="gallery-item" src="./assets/images/gallery/portraits/portrait-ade-tunji-800.webp" srcset="./assets/images/gallery/portraits/portrait-ade-tunji-500.webp 500w" sizes="(max-width: 500px) 500px, 800px" loading="lazy" alt="Photo portrait d'Ade Tunji"/>
-				<img data-gallery-tag="Mariages" class="gallery-item" src="./assets/images/gallery/mariage/mariés-souriants-800.webp" srcset="./assets/images/gallery/mariage/mariés-souriants-500.webp 500w" sizes="(max-width: 500px) 500px, 800px" loading="lazy" alt="Photo de deux jeunes mariés souriant"/>
-				<img data-gallery-tag="Portrait" class="gallery-item" src="./assets/images/gallery/portraits/portrait-femme-lunettes-800.webp" srcset="./assets/images/gallery/portraits/portrait-femme-lunettes-500.webp 500w" sizes="(max-width: 500px) 500px, 800px" loading="lazy" alt="Photo portrait d'une jeune fille avec des lunettes"/>
-				<img data-gallery-tag="Concert" class="gallery-item" src="./assets/images/gallery/concerts/concert-austin-neill-800.webp" srcset="./assets/images/gallery/concerts/concert-austin-neill-500.webp 500w" sizes="(max-width: 500px) 500px, 800px" loading="lazy" alt="Photo du concert de Austin Neill"/>
-				<img data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images/gallery/entreprise/salariée-souriante-800.webp" srcset="./assets/images/gallery/entreprise/salariée-souriante-500.webp 500w" sizes="(max-width: 500px) 500px, 800px" loading="lazy" alt="Photo portrait d'une salariée d'entreprise riant devant son ordinateur"/>
+				<img data-gallery-tag="Concert" class="gallery-item" src="https://cdn.jsdelivr.net/gh/Florian-Godeau/Projet-9-Nina-Carducci/assets/images/gallery/concerts/concert-aaron-paul-800.webp" srcset="https://cdn.jsdelivr.net/gh/Florian-Godeau/Projet-9-Nina-Carducci/assets/images/gallery/concerts/concert-aaron-paul-500.webp 500w" sizes="(max-width: 500px) 500px, 800px" loading="lazy" alt="Photo du concert d'Aaron Paul"/>
+				<img data-gallery-tag="Entreprises" class="gallery-item" src="https://cdn.jsdelivr.net/gh/Florian-Godeau/Projet-9-Nina-Carducci/assets/images/gallery/entreprise/portrait-homme-affaire-800.webp" srcset="https://cdn.jsdelivr.net/gh/Florian-Godeau/Projet-9-Nina-Carducci/assets/images/gallery/entreprise/portrait-homme-affaire-500.webp 500w" sizes="(max-width: 500px) 500px, 800px" loading="lazy" alt="Photo portrait d'un homme d'affaire"/>
+				<img data-gallery-tag="Entreprises" class="gallery-item" src="https://cdn.jsdelivr.net/gh/Florian-Godeau/Projet-9-Nina-Carducci/assets/images/gallery/entreprise/salariées-riant-800.webp" srcset="https://cdn.jsdelivr.net/gh/Florian-Godeau/Projet-9-Nina-Carducci/assets/images/gallery/entreprise/salariées-riant-500.webp 500w" sizes="(max-width: 500px) 500px, 800px" loading="lazy" alt="Photo d'une entreprise où deux salariées rient"/>
+				<img data-gallery-tag="Mariages" class="gallery-item" src="https://cdn.jsdelivr.net/gh/Florian-Godeau/Projet-9-Nina-Carducci/assets/images/gallery/mariage/personnes-se-donnant-les-mains-800.webp" srcset="https://cdn.jsdelivr.net/gh/Florian-Godeau/Projet-9-Nina-Carducci/assets/images/gallery/mariage/personnes-se-donnant-les-mains-500.webp 500w" sizes="(max-width: 500px) 500px, 800px" loading="lazy" alt="Photo où deux personnes vont se donner les mains"/>
+				<img data-gallery-tag="Portrait" class="gallery-item" src="https://cdn.jsdelivr.net/gh/Florian-Godeau/Projet-9-Nina-Carducci/assets/images/gallery/portraits/portrait-ade-tunji-800.webp" srcset="https://cdn.jsdelivr.net/gh/Florian-Godeau/Projet-9-Nina-Carducci/assets/images/gallery/portraits/portrait-ade-tunji-500.webp 500w" sizes="(max-width: 500px) 500px, 800px" loading="lazy" alt="Photo portrait d'Ade Tunji"/>
+				<img data-gallery-tag="Mariages" class="gallery-item" src="https://cdn.jsdelivr.net/gh/Florian-Godeau/Projet-9-Nina-Carducci/assets/images/gallery/mariage/mariés-souriants-800.webp" srcset="https://cdn.jsdelivr.net/gh/Florian-Godeau/Projet-9-Nina-Carducci/assets/images/gallery/mariage/mariés-souriants-500.webp 500w" sizes="(max-width: 500px) 500px, 800px" loading="lazy" alt="Photo de deux jeunes mariés souriant"/>
+				<img data-gallery-tag="Portrait" class="gallery-item" src="https://cdn.jsdelivr.net/gh/Florian-Godeau/Projet-9-Nina-Carducci/assets/images/gallery/portraits/portrait-femme-lunettes-800.webp" srcset="https://cdn.jsdelivr.net/gh/Florian-Godeau/Projet-9-Nina-Carducci/assets/images/gallery/portraits/portrait-femme-lunettes-500.webp 500w" sizes="(max-width: 500px) 500px, 800px" loading="lazy" alt="Photo portrait d'une jeune fille avec des lunettes"/>
+				<img data-gallery-tag="Concert" class="gallery-item" src="https://cdn.jsdelivr.net/gh/Florian-Godeau/Projet-9-Nina-Carducci/assets/images/gallery/concerts/concert-austin-neill-800.webp" srcset="https://cdn.jsdelivr.net/gh/Florian-Godeau/Projet-9-Nina-Carducci/assets/images/gallery/concerts/concert-austin-neill-500.webp 500w" sizes="(max-width: 500px) 500px, 800px" loading="lazy" alt="Photo du concert de Austin Neill"/>
+				<img data-gallery-tag="Entreprises" class="gallery-item" src="https://cdn.jsdelivr.net/gh/Florian-Godeau/Projet-9-Nina-Carducci/assets/images/gallery/entreprise/salariée-souriante-800.webp" srcset="https://cdn.jsdelivr.net/gh/Florian-Godeau/Projet-9-Nina-Carducci/assets/images/gallery/entreprise/salariée-souriante-500.webp 500w" sizes="(max-width: 500px) 500px, 800px" loading="lazy" alt="Photo portrait d'une salariée d'entreprise riant devant son ordinateur"/>
 			</div>
 		</div>
 		<div class="quote">
@@ -216,7 +216,7 @@
 				</form>
 			</div>
 			<div class="picture right">
-				<img src="./assets/images/camera-800.webp" srcset="./assets/images/camera-500.webp 500w" sizes="(max-width: 500px) 500px, 800px" loading="lazy" alt="Photo d'un appareil photo" width="800" height="798">
+				<img src="https://cdn.jsdelivr.net/gh/Florian-Godeau/Projet-9-Nina-Carducci/assets/images/camera-800.webp" srcset="https://cdn.jsdelivr.net/gh/Florian-Godeau/Projet-9-Nina-Carducci/assets/images/camera-500.webp 500w" sizes="(max-width: 500px) 500px, 800px" loading="lazy" alt="Photo d'un appareil photo" width="800" height="798">
 			</div>
 		</div>
 	</div>
